[package]
name = "oc-quota-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.0"
chrono = { version = "0.4.45", features = ["serde"] }
crossterm = "0.29.0"
futures = "0.3.32"
futures-util = "0.3.32"
http-body-util = "0.1.3"
hudsucker = "0.24.1"
hyper = { version = "1.10.1", features = ["full"] }
hyper-rustls = "0.27.9"
hyper-util = { version = "0.1.20", features = ["full"] }
parking_lot = "0.12.5"
ratatui = "0.30.0"
rcgen = "0.14.8"
reqwest = { version = "0.12", features = ["rustls-tls", "socks", "json", "stream"] }
rustls = "0.23.40"
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
